On x86, print the I/O address of lpt_puc as for com_puc so that hacks using iopl/ioperm can be told where to find the parallel port.

Closes PR kern/43683.